// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with default props 1`] = `undefined`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with default props 2`] = `<!---->`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: active 1`] = `undefined`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: active 2`] = `<!---->`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: inactive 1`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    pbehavior-inactive-name
  </span>
</div>
`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: inactive 2`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light primary--text"
  >
    brightness_3
  </i>
</span>
`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: maintenance 1`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    pbehavior-maintenance-name
  </span>
</div>
`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: maintenance 2`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light primary--text"
  >
    build
  </i>
</span>
`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: pause 1`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    pbehavior-pause-name
  </span>
</div>
`;

exports[`entity-column-pbehavior-info Renders \`entity-column-pbehavior-info\` with type: pause 2`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light primary--text"
  >
    pause
  </i>
</span>
`;
